# scribe

./: CMakeLists.txt  README  README.md  bootstrap.sh
src/: .gitignore  CMakeLists.txt  common.h  env_default.h  store.cpp
src/gen-cpp/: BucketStoreMapping.cpp  BucketStoreMapping.h  BucketStoreMapping_server.skeleton.cpp  CMakeLists.txt  FacebookService.cpp  bucketupdater_constants.cpp  bucketupdater_constants.h  bucketupdater_types.cpp  bucketupdater_types.h  scribe.cpp  scribe.h  scribe_server.skeleton.cpp  scribe_types.cpp  scribe_types.h
test/bucketupdater/: main.cpp
